Add ignore info

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "gulp-file-version",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Add suffix to reference.",
   "main": "index.js",
-  "scripts": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TabrisK/gulp-file-version"
+  },"scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Helex",
@@ -11,5 +14,6 @@
   "dependencies": {
     "glob": "^7.1.1",
     "through2": "^2.0.2"
-  }
+  },
+  "homepage": "https://github.com/TabrisK/gulp-file-version"
 }
